--- a/angular8/src/app/uploading-file/uploading-file.component.html
+++ b/angular8/src/app/uploading-file/uploading-file.component.html
@@ -1,25 +1,38 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 offset-md-3">
-            <h3>Choose File</h3>
-            <div class="form-group">
-                <input multiple type="file" name="image" (change)="fileProgress($event)" />
-            </div>
-            <div *ngIf="fileUploadProgress">
-                Upload progress: {{ fileUploadProgress }}
-            </div>
-            <div class="image-preview" style="display: flex;" *ngIf="previewUrl">
-                <div *ngFor="let item of previewUrl">
-                    <img style="margin-right:20px;" [src]="item" height="100px" width="100px" />
-                </div>
-            </div>
-            <div class="mb-3" *ngIf="uploadedFilePath">
-                {{uploadedFilePath}}
-            </div>
+<div class="row p-3">
+    <div class="col-12">
+        List img
+        <div class="form-group">
+            <input multiple type="file" name="image" (change)="fileProgress($event)" />
+        </div>
 
-            <div class="form-group">
-                <button class="btn btn-primary" (click)="onSubmit()">Submit</button>
+        <div class="image-preview" style="display: flex;" *ngIf="previewUrl">
+            <div *ngFor="let item of previewUrl">
+                <img style="margin-right:20px;" [src]="item" height="100px" width="100px" />
             </div>
+        </div>
+        <div class="mb-3" *ngIf="uploadedFilePath">
+            {{uploadedFilePath}}
+        </div>
+        <div class="form-group">
+            <button class="btn btn-primary" (click)="onSubmit()">Submit</button>
+        </div>
+    </div>
+
+
+    <!--Uploading file avatar-->
+    <div class="col-12">
+        Avatar
+        <div class="form-group">
+            <input type="file" name="image" (change)="onChangeAvatar($event)" />
+        </div>
+        <div *ngIf="avatar">
+            <img [src]="avatar" height="100px" width="100px" style="border-radius: 50%;" />
+        </div>
+        <div class="mb-3" *ngIf="uploadedFilePath">
+            {{uploadedFilePath}}
+        </div>
+        <div class="form-group">
+            <button class="btn btn-primary" (click)="onSubmit()">Submit</button>
         </div>
     </div>
 </div>
