--- a/angular8/src/app/map/map.component.html
+++ b/angular8/src/app/map/map.component.html
@@ -1,7 +1,7 @@
 <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDefaultUI]="false" [zoomControl]="false"
     (mapClick)="mapClicked($event)">
-    <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(m.label, i)" [latitude]="m.lat"
-        [longitude]="m.lng" [label]="m.label" [markerDraggable]="m.draggable" (dragEnd)="markerDragEnd(m, $event,i)">
+    <agm-marker *ngFor="let m of markers; let i = index" [latitude]="m.lat" [longitude]="m.lng" [label]="m.label"
+        [markerDraggable]="m.draggable" (dragEnd)="markerDragEnd(m, $event,i)">
         <agm-info-window>
             <strong>{{m.lat}} , {{m.lng}}</strong>
         </agm-info-window>
