--- a/angular8/src/app/material/material.component.html
+++ b/angular8/src/app/material/material.component.html
@@ -1,5 +1,9 @@
+<!--Data table-->
 <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource">
+    <mat-form-field>
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    </mat-form-field>
+    <table mat-table [dataSource]="dataSource" matSort>
 
         <!-- Position Column -->
         <ng-container matColumnDef="position">
@@ -9,20 +13,26 @@
 
         <!-- Name Column -->
         <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
             <td mat-cell *matCellDef="let element"> {{element.name}} </td>
         </ng-container>
 
         <!-- Weight Column -->
         <ng-container matColumnDef="weight">
-            <th mat-header-cell *matHeaderCellDef> Weight </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Weight </th>
             <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
         </ng-container>
 
         <!-- Symbol Column -->
         <ng-container matColumnDef="symbol">
-            <th mat-header-cell *matHeaderCellDef> Symbol </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Symbol </th>
             <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+        </ng-container>
+
+        <!-- Setting Column -->
+        <ng-container matColumnDef="setting">
+            <th mat-header-cell *matHeaderCellDef> Setting </th>
+            <td mat-cell *matCellDef="let element"> <button (click)="onClick(element)">Click</button> </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -31,3 +41,43 @@
 
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
+
+<br>
+<br>
+<!--Radio-->
+<mat-radio-group aria-label="Select an option">
+    <mat-radio-button value="1">Option 1</mat-radio-button>
+    <mat-radio-button value="2">Option 2</mat-radio-button>
+</mat-radio-group>
+
+<br>
+<br>
+
+<mat-form-field class="example-full-width">
+    <input matInput placeholder="State" aria-label="State" [matAutocomplete]="auto">
+    <mat-autocomplete #auto="matAutocomplete">
+        <mat-option *ngFor="let state of filteredStates | async" [value]="state.name">
+            <img class="example-option-img" aria-hidden [src]="state.flag" height="25">
+            <span>{{state.name}}</span> |
+            <small>Population: {{state.population}}</small>
+        </mat-option>
+    </mat-autocomplete>
+</mat-form-field>
+
+<br>
+<mat-slide-toggle> Disable Input? </mat-slide-toggle>
+<br>
+<mat-checkbox> Check me! </mat-checkbox>
+<br>
+
+<form class="example-form">
+    <mat-form-field class="example-full-width">
+        <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl"
+            [matAutocomplete]="auto">
+        <mat-autocomplete #auto="matAutocomplete">
+            <mat-option *ngFor="let option of options" [value]="option">
+                {{option}}
+            </mat-option>
+        </mat-autocomplete>
+    </mat-form-field>
+</form>
