--- a/angular8/src/app/material/material.component.html
+++ b/angular8/src/app/material/material.component.html
@@ -69,15 +69,60 @@
 <br>
 <mat-checkbox> Check me! </mat-checkbox>
 <br>
+<mat-form-field>
+    <input matInput [matDatepicker]="picker" placeholder="Choose a date">
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+</mat-form-field>
+<br>
+<br>
+<h4>Basic mat-select</h4>
+<mat-form-field>
+    <mat-label>Favorite food</mat-label>
+    <mat-select>
+        <mat-option *ngFor="let food of foods" [value]="food.value">
+            {{food.viewValue}}
+        </mat-option>
+    </mat-select>
+</mat-form-field>
+<br>
+<br>
+<mat-form-field>
+    <mat-label>Select an option</mat-label>
+    <mat-select [(value)]="selected">
+        <mat-option>None</mat-option>
+        <mat-option value="option1">Option 1</mat-option>
+        <mat-option value="option2">Option 2</mat-option>
+        <mat-option value="option3">Option 3</mat-option>
+    </mat-select>
+</mat-form-field>
 
-<form class="example-form">
-    <mat-form-field class="example-full-width">
-        <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl"
-            [matAutocomplete]="auto">
-        <mat-autocomplete #auto="matAutocomplete">
-            <mat-option *ngFor="let option of options" [value]="option">
-                {{option}}
-            </mat-option>
-        </mat-autocomplete>
-    </mat-form-field>
-</form>
+<p>You selected: {{selected}}</p>
+
+<br>
+<br>
+<h4>mat select</h4>
+<mat-form-field>
+    <mat-label>Favorite animal</mat-label>
+    <mat-select [formControl]="animalControl" required>
+        <mat-option>--</mat-option>
+        <mat-option *ngFor="let animal of animals" [value]="animal">
+            {{animal.name}}
+        </mat-option>
+    </mat-select>
+    <mat-error *ngIf="animalControl.hasError('required')">Please choose an animal</mat-error>
+    <mat-hint>{{animalControl.value?.sound}}</mat-hint>
+</mat-form-field>
+<br>
+<br>
+<mat-form-field>
+    <mat-select placeholder="Toppings" [formControl]="toppings" multiple>
+        <mat-select-trigger>
+            {{toppings.value ? toppings.value[0] : ''}}
+            <span *ngIf="toppings.value?.length > 1" class="example-additional-selection">
+                (+{{toppings.value.length - 1}} {{toppings.value?.length === 2 ? 'other' : 'others'}})
+            </span>
+        </mat-select-trigger>
+        <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
+    </mat-select>
+</mat-form-field>
