--- a/angular8/src/app/map/map.component.html
+++ b/angular8/src/app/map/map.component.html
@@ -1,10 +1,29 @@
-<agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDefaultUI]="false" [zoomControl]="false"
-    (mapClick)="mapClicked($event)">
-    <agm-marker *ngFor="let m of markers; let i = index" [latitude]="m.lat" [longitude]="m.lng" [label]="m.label"
-        [markerDraggable]="m.draggable" (dragEnd)="markerDragEnd(m, $event,i)">
-        <agm-info-window>
-            <strong>{{m.lat}} , {{m.lng}}</strong>
-        </agm-info-window>
-    </agm-marker>
-</agm-map>
-{{markers | json}}
+<div class="row">
+    <div class="col-6">
+        <agm-map [(latitude)]="latCentral" [(longitude)]="lngCentral" [zoom]="zoom" [disableDefaultUI]="false"
+            [zoomControl]="false" (mapClick)="mapClicked($event)">
+            <agm-marker *ngFor="let m of markers" [latitude]="m.lat" [longitude]="m.lng" [label]="m.label"
+                [markerDraggable]="m.draggable" (dragEnd)="markerDragEnd(m, $event,i)">
+            </agm-marker>
+        </agm-map>
+        {{markers | json}}
+    </div>
+    <div class="col-6">
+        <select (change)='onSeclet(1,$event.target.value)' class="form-control" name="city_id">
+            <option disabled>Chọn thành phố</option>
+            <option *ngFor="let city of cityData" [value]="city.code">{{city.name}}</option>
+        </select>
+        <select (change)='onSeclet(2,$event.target.value)' class="form-control" name="district_id">
+            <option disabled>Chọn quận</option>
+            <option *ngFor="let district of districtData" [value]="district.code">
+                {{district.name}}</option>
+        </select>
+        <select (change)='onSeclet(3,$event.target.value)' class="form-control" name="wards_id">
+            <option *ngFor="let wards of wardsData" [value]="wards.code">{{wards.name}}</option>
+        </select>
+        <select (change)='onSeclet($event.target.value)' class="form-control" name="street_id">
+            <option *ngFor="let streets of streetData" [value]="streets.code">{{streets.name}}
+            </option>
+        </select>
+    </div>
+</div>
