--- a/angular8/src/app/map/map.component.html
+++ b/angular8/src/app/map/map.component.html
@@ -32,7 +32,7 @@
 
         <br>
         <br>
-        <input class="form-control" type="text">
-        <input class="form-control" type="text">
+        <input class="form-control" type="text" (input)="onChange($event.target.value,1)">
+        <input class="form-control" type="text" (input)="onChange($event.target.value,2)">
     </div>
 </div>
