--- a/angular8/src/app/bold-man/bold-man.component.html
+++ b/angular8/src/app/bold-man/bold-man.component.html
@@ -6,3 +6,117 @@
         style="background-image: url(https://www.boldman.vn/wwwroot/templates/website/global/img/background1.jpg);">
     </div>
 </div>
+
+
+<div id="svg-container">
+    <svg>
+        <path>
+            <animate attributeName="d" dur="1440ms" repeatCount="indefinite" keyTimes="0;
+                           .0625;
+                           .208333333;
+                           .3125;
+                           .395833333;
+                           .645833333;
+                           .833333333;
+                           1" calcMode="spline" keySplines="0,0,1,1;
+                             .42,0,.58,1;
+                             .42,0,1,1;
+                             0,0,.58,1;
+                             .42,0,.58,1;
+                             .42,0,.58,1;
+                             .42,0,.58,1" values="M 0,0 
+                         C 50,0 50,0 100,0
+                         100,50 100,50 100,100
+                         50,100 50,100 0,100
+                         0,50 0,50 0,0
+                         Z;
+
+                         M 0,0 
+                         C 50,0 50,0 100,0
+                         100,50 100,50 100,100
+                         50,100 50,100 0,100
+                         0,50 0,50 0,0
+                         Z;
+
+                         M 50,0 
+                         C 75,25 75,25 100,50 
+                         75,75 75,75 50,100
+                         25,75 25,75 0,50
+                         25,25 25,25 50,0
+                         Z;
+
+                         M 25,50 
+                         C 37.5,25 37.5,25 50,0 
+                         75,50 75,50 100,100
+                         50,100 50,100 0,100
+                         12.5,75 12.5,75 25,50
+                         Z;
+
+                         M 25,50 
+                         C 37.5,25 37.5,25 50,0 
+                         75,50 75,50 100,100
+                         50,100 50,100 0,100
+                         12.5,75 12.5,75 25,50
+                         Z;
+
+                         M 50,0
+                         C 77.6,0 100,22.4 100,50 
+                         100,77.6 77.6,100 50,100
+                         22.4,100, 0,77.6, 0,50
+                         0,22.4, 22.4,0, 50,0
+                         Z;
+                         
+                         M 50,0
+                         C 77.6,0 100,22.4 100,50 
+                         100,77.6 77.6,100 50,100
+                         22.4,100, 0,77.6, 0,50
+                         0,22.4, 22.4,0, 50,0
+                         Z;
+                         
+                         M 100,0 
+                         C 100,50 100,50 100,100
+                         50,100 50,100 0,100
+                         0,50 0,50 0,0
+                         50,0 50,0 100,0
+                         Z;" />
+            <animate attributeName="fill" dur="1440ms" repeatCount="indefinite" keyTimes="0;
+                           .0625;
+                           .208333333;
+                           .3125;
+                           .395833333;
+                           .645833333;
+                           .833333333;
+                           1" calcMode="spline" keySplines="0,0,1,1;
+                             .42,0,.58,1;
+                             .42,0,1,1;
+                             0,0,.58,1;
+                             .42,0,.58,1;
+                             .42,0,.58,1;
+                             .42,0,.58,1" values="#1eb287;
+                         #1eb287;
+                         #1ca69e;
+                         #188fc2;
+                         #188fc2;
+                         #bb625e;
+                         #ca5f52;
+                         #1eb287;" />
+        </path>
+    </svg>
+</div>
+
+<div id="loading-page">
+    <div id="loading-bg"></div>
+    <h2>Loading...</h2>
+</div>
+
+<div id="loading-page">
+    <div id="loader">
+        <span data-text="Loading"></span>
+        <span data-text="Loading"></span>
+        <span data-text="Loading"></span>
+        <span data-text="Loading"></span>
+        <span data-text="Loading"></span>
+    </div>
+</div>
+
+<a href="" id="btn-effect">Button</a>
