--- a/angular8/src/app/uploading-file-excel/uploading-file-excel.component.html
+++ b/angular8/src/app/uploading-file-excel/uploading-file-excel.component.html
@@ -6,38 +6,57 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-2 form-group">
-            <button type="button" class="btn btn-info" (click)="readAsCSV()">Read as CSV</button>
-        </div>
-        <div class="col-md-2 form-group">
+        <!--Chuyển đổi sang dạng Json-->
+        <div class="col-md-6 form-group">
             <button type="button" class="btn btn-info" (click)="readAsJson()">Read as JSON</button>
         </div>
-        <div class="col-md-2 form-group">
-            <button type="button" class="btn btn-info" (click)="readAsHTML()">Read as HTML</button>
-        </div>
-        <div class="col-md-2 form-group">
+
+        <div class="col-md-6 form-group">
             <button type="button" class="btn btn-info" (click)="readAsText()">Read as Text</button>
         </div>
     </div>
 </div>
-<br>
-<br>
-<br>
+
+<!-- xuất file excel-->
 <a style="cursor: pointer" (click)="exportexcel()">
     <mat-icon> cloud_download</mat-icon>
 </a>
 
-<table id="excel-table">
-    <tr>
-        <th>ContainerNo</th>
-        <th>SelCondition</th>
-        <th> ContainerCondition</th>
-        <th>GateInDateTime</th>
-    </tr>
-    <tr *ngFor="let sup of Company">
-        <td>{{ sup.ContainerNo }}</td>
-        <td>{{ sup.SelCondition }}</td>
-        <td>{{ sup.ContainerCondition }}</td>
-        <td>{{ sup.GateInDateTime }}</td>
-    </tr>
+<table mat-table [dataSource]="jsonData" class="mat-elevation-z8" style="width:100%" id="excel-table">
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="STT">
+        <th mat-header-cell *matHeaderCellDef> No. </th>
+        <td mat-cell *matCellDef="let element"> {{element.STT}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="gender">
+        <th mat-header-cell *matHeaderCellDef> Giới tính </th>
+        <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="address">
+        <th mat-header-cell *matHeaderCellDef> Địa chỉ </th>
+        <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="SDT">
+        <th mat-header-cell *matHeaderCellDef> SĐT </th>
+        <td mat-cell *matCellDef="let element"> {{element.SDT}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
