--- a/angular8/src/app/uploading-file-excel/uploading-file-excel.component.html
+++ b/angular8/src/app/uploading-file-excel/uploading-file-excel.component.html
@@ -1,23 +1,19 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 form-group">
-            <input type="file" class="form-control" (change)="uploadedFile($event)" placeholder="Upload file"
+            <input multiple type="file" class="form-control" (change)="uploadedFile($event)" placeholder="Upload file"
                 accept=".xlsx">
         </div>
     </div>
     <div class="row">
-        <!--Chuyển đổi sang dạng Json-->
+        <!-- Convert to Json format-->
         <div class="col-md-6 form-group">
             <button type="button" class="btn btn-info" (click)="readAsJson()">Read as JSON</button>
-        </div>
-
-        <div class="col-md-6 form-group">
-            <button type="button" class="btn btn-info" (click)="readAsText()">Read as Text</button>
         </div>
     </div>
 </div>
 
-<!-- xuất file excel-->
+<!-- Export excel file-->
 <a style="cursor: pointer" (click)="exportexcel()">
     <mat-icon> cloud_download</mat-icon>
 </a>
@@ -25,36 +21,36 @@
 <table mat-table [dataSource]="jsonData" class="mat-elevation-z8" style="width:100%" id="excel-table">
 
     <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
+          The actual rendered columns are set as a property on the row definition -->
 
     <!-- Position Column -->
     <ng-container matColumnDef="STT">
         <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.STT}} </td>
+        <td mat-cell *matCellDef="let element"> {{element?.STT || 'Chưa cập nhật'}} </td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <td mat-cell *matCellDef="let element"> {{element?.name || 'Chưa cập nhật'}} </td>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="gender">
         <th mat-header-cell *matHeaderCellDef> Giới tính </th>
-        <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
+        <td mat-cell *matCellDef="let element"> {{element?.gender || 'Chưa cập nhật'}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="address">
         <th mat-header-cell *matHeaderCellDef> Địa chỉ </th>
-        <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+        <td mat-cell *matCellDef="let element"> {{element?.address || 'Chưa cập nhật'}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="SDT">
         <th mat-header-cell *matHeaderCellDef> SĐT </th>
-        <td mat-cell *matCellDef="let element"> {{element.SDT}} </td>
+        <td mat-cell *matCellDef="let element"> {{ 0+element?.SDT || 'Chưa cập nhật'}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
