--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,38 +1,94 @@
 <div class="row">
     <div class="col-6">
-        <agm-map [(latitude)]="latCentral" [(longitude)]="lngCentral" [zoom]="zoom" [disableDefaultUI]="false"
-            [zoomControl]="false" (mapClick)="mapClicked($event)">
-            <agm-marker *ngFor="let m of markers" [latitude]="m.lat" [longitude]="m.lng" [label]="m.label"
-                [markerDraggable]="m.draggable" (dragEnd)="markerDragEnd(m, $event)">
+        <agm-map
+            [(latitude)]="latCentral"
+            [(longitude)]="lngCentral"
+            [zoom]="zoom"
+            [disableDefaultUI]="false"
+            [zoomControl]="false"
+            (mapClick)="mapClicked($event)"
+        >
+            <agm-marker
+                *ngFor="let m of markers"
+                [latitude]="m.lat"
+                [longitude]="m.lng"
+                [label]="m.label"
+                [markerDraggable]="m.draggable"
+                (dragEnd)="markerDragEnd(m, $event)"
+            >
                 <agm-info-window>
                     <strong>{{markers[0].lat}}----{{markers[0].lng}}</strong>
                 </agm-info-window>
             </agm-marker>
+            <agm-direction
+                [origin]="origin"
+                [destination]="destination"
+            >
+            </agm-direction>
         </agm-map>
         {{markers | json}}
     </div>
     <div class="col-6">
-        <select (change)='onSeclet(1,$event.target.value)' class="form-control" name="city_id">
+        <select
+            (change)='onSeclet(1,$event.target.value)'
+            class="form-control"
+            name="city_id"
+        >
             <option disabled>Chọn thành phố</option>
-            <option *ngFor="let city of cityData" [value]="city.code">{{city.name}}</option>
+            <option
+                *ngFor="let city of cityData"
+                [value]="city.code"
+            >{{city.name}}</option>
         </select>
-        <select (change)='onSeclet(2,$event.target.value)' class="form-control" name="district_id" [disabled]="zoom==8">
+        <select
+            (change)='onSeclet(2,$event.target.value)'
+            class="form-control"
+            name="district_id"
+            [disabled]="zoom==8"
+        >
             <option disabled>Chọn quận</option>
-            <option *ngFor="let district of districtData" [value]="district.code">
+            <option
+                *ngFor="let district of districtData"
+                [value]="district.code"
+            >
                 {{district.name}}
             </option>
         </select>
-        <select (change)='onSeclet(3,$event.target.value)' class="form-control" name="wards_id" [disabled]="zoom<=10">
-            <option *ngFor="let wards of wardsData" [value]="wards.code">{{wards.name}}</option>
+        <select
+            (change)='onSeclet(3,$event.target.value)'
+            class="form-control"
+            name="wards_id"
+            [disabled]="zoom<=10"
+        >
+            <option
+                *ngFor="let wards of wardsData"
+                [value]="wards.code"
+            >{{wards.name}}</option>
         </select>
-        <select (change)='onSeclet($event.target.value)' class="form-control" name="street_id" [disabled]="zoom<=10">
-            <option *ngFor="let streets of streetData" [value]="streets.code">{{streets.name}}
+        <select
+            (change)='onSeclet($event.target.value)'
+            class="form-control"
+            name="street_id"
+            [disabled]="zoom<=10"
+        >
+            <option
+                *ngFor="let streets of streetData"
+                [value]="streets.code"
+            >{{streets.name}}
             </option>
         </select>
 
         <br>
         <br>
-        <input class="form-control" type="text" (input)="onChange($event.target.value,1)">
-        <input class="form-control" type="text" (input)="onChange($event.target.value,2)">
+        <input
+            class="form-control"
+            type="text"
+            (input)="onChange($event.target.value,1)"
+        >
+        <input
+            class="form-control"
+            type="text"
+            (input)="onChange($event.target.value,2)"
+        >
     </div>
 </div>
